test/fail/NoBindingForBuiltin.agda
module NoBindingForBuiltin where

foo = 42

